--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         const username = document.getElementById("username").value;
         const password = document.getElementById("password").value;
 
-        const response = await fetch("/log", {
+        const response = await fetch("/api/log", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
