--- a/index.html
+++ b/index.html
@@ -7,26 +7,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <h1>Enter login details to update your account</h1>
-    </header>
     <main>
-      <section>
-        <form id="loginForm">
+      <section class="login-container">
+        <img src="images/ntnu-logo.png" class="ntnu-logo" alt="ntnu-logo" />
+        <form id="loginForm" class="login-form">
           <label for="username">Username:</label>
-          <input
-            type="text"
-            id="username"
-            name="username"
-            required
-          /><br /><br />
+          <input type="text" id="username" name="username" required />
           <label for="password">Password:</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            required
-          /><br /><br />
+          <input type="password" id="password" name="password" required />
           <button type="button" onclick="submitForm()">Login</button>
         </form>
       </section>
