--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <main>
+      <section class="disclaimer">
+        <h2>
+          This is for educational purposes only, do not enter your real username
+          and password!
+        </h2>
+      </section>
       <section class="login-container">
         <img src="images/ntnu-logo.png" class="ntnu-logo" alt="ntnu-logo" />
         <form id="loginForm" class="login-form">
