fix: fixed endpoint

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         const username = document.getElementById("username").value;
         const password = document.getElementById("password").value;
 
-        const response = await fetch("/api/log", {
+        const response = await fetch("/.netlify/functions/loginlogger", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
